button to move to next page, shell set up properly and basic pages

--- a/CycleSafe/CycleSafe/CycleSafe/CycleSafe.csproj
+++ b/CycleSafe/CycleSafe/CycleSafe/CycleSafe.csproj
@@ -25,13 +25,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="AppShell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\ConnectPage.xaml">
+    <EmbeddedResource Update="ConnectPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\HomeScreen.xaml">
+    <EmbeddedResource Update="HomeScreen.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
