--- a/CycleSafe/CycleSafe/CycleSafe.iOS/CycleSafe.iOS.csproj
+++ b/CycleSafe/CycleSafe/CycleSafe.iOS/CycleSafe.iOS.csproj
@@ -68,6 +68,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="NLog.config" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
