--- a/CycleSafe/CycleSafe/CycleSafe/CycleSafe.csproj
+++ b/CycleSafe/CycleSafe/CycleSafe/CycleSafe.csproj
@@ -11,8 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
+    <PackageReference Include="NLog" Version="4.7.12" />
+    <PackageReference Include="Plugin.BLE" Version="2.1.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\LoggingService\LoggingService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,9 +41,5 @@
     <EmbeddedResource Update="Views\HomeScreen.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
