Work on Ultra Sonic Sensor / Bluetooth Template

--- a/PI/BlinkingTest/BlinkingTest.vcxproj
+++ b/PI/BlinkingTest/BlinkingTest.vcxproj
@@ -51,7 +51,7 @@
       <LibraryDependencies>wiringPi</LibraryDependencies>
     </Link>
     <RemotePostBuildEvent>
-      <Command>gpio export 17 out</Command>
+      <Command>$(gpio export 23 out) $(gpio export 17 out)</Command>
       <Message>export pin 17 using the gpio utility so that we can execute the blink program without sudo</Message>
     </RemotePostBuildEvent>
   </ItemDefinitionGroup>
