--- a/CycleSafe/CycleSafe.Bluetooth.Android/CycleSafe.Bluetooth.Android.csproj
+++ b/CycleSafe/CycleSafe.Bluetooth.Android/CycleSafe.Bluetooth.Android.csproj
@@ -51,7 +51,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bluetooth\BluetoothHandler.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -59,7 +58,10 @@
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.5" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.3" />
+    <PackageReference Include="Xamarin.Google.Android.Material">
+      <Version>1.3.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
@@ -68,6 +70,10 @@
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CycleSafe\CycleSafe\CycleSafe.csproj">
+      <Project>{0cb4d292-fac8-49f9-b1ed-9c3bb8cbdcff}</Project>
+      <Name>CycleSafe</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LoggingService\LoggingService.csproj">
       <Project>{1F5CFBF5-2437-4EA5-8CEC-4FE8BD5C7021}</Project>
       <Name>LoggingService</Name>
