--- a/CycleSafe/CycleSafe/CycleSafe.Android/Properties/AndroidManifest.xml
+++ b/CycleSafe/CycleSafe/CycleSafe.Android/Properties/AndroidManifest.xml
@@ -4,4 +4,8 @@
     <application android:label="CycleSafe.Android" android:theme="@style/MainTheme"></application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+	<uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
 </manifest>
