--- a/CycleSafe/CycleSafe/CycleSafe.Android/Assets/NLog.config
+++ b/CycleSafe/CycleSafe/CycleSafe.Android/Assets/NLog.config
@@ -8,6 +8,7 @@
 
 	<targets>
 		<target xsi:type="File" name="f" fileName="$/sdcard/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+		<!--target xsi:type="File" name="f" fileName="${specialfolder:folder=MyDocuments}/logs/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" /-->
 		<target xsi:type="Console" name="console" layout="${longdate} ${uppercase:${level}} ${message}" />
 	</targets>
 
