adding icons adn flyout menu

--- a/CycleSafe/CycleSafe/CycleSafe.Android/CycleSafe.Android.csproj
+++ b/CycleSafe/CycleSafe/CycleSafe.Android/CycleSafe.Android.csproj
@@ -94,9 +94,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\CycleSafe.Bluetooth.Android\CycleSafe.Bluetooth.Android.csproj">
       <Project>{db6b771f-8cd2-4596-a45c-8ff077cb7a24}</Project>
@@ -113,6 +111,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\NLog.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bluetooth.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\cyclesafe.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
