--- a/CycleSafeJava/app/src/main/AndroidManifest.xml
+++ b/CycleSafeJava/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
         android:maxSdkVersion="30" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"
         android:maxSdkVersion="30" />
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"
+        android:maxSdkVersion="30"/>
 
     <application
         android:allowBackup="true"
