--- a/CycleSafeJava/app/src/main/AndroidManifest.xml
+++ b/CycleSafeJava/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <uses-permission
         android:name="android.permission.BLUETOOTH_CONNECT"
         android:maxSdkVersion="30" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
 
     <application
         android:allowBackup="true"
