--- a/CycleSafeJava/app/src/main/AndroidManifest.xml
+++ b/CycleSafeJava/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CycleSafeJava">
+        android:theme="@style/Theme.CycleSafeJava"
+        android:name=".CycleSafe">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -55,6 +56,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
